--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
-html, body {
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
+
+html,
+body {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: sans-serif;
-    background-color: #E8E8E8;
+background-color: #ffffff00;
 }
